--- a/CSSNAV/css/list.css
+++ b/CSSNAV/css/list.css
@@ -70,16 +70,19 @@
     border:2px solid #CD2A2C;
     border-top:5px;
     box-sizing: border-box;
+    position:relative;
 }
 
 #list-div .list2-class>li{
-    width:186px;
+    width:200px;
     padding:5px 0 5px 10px;
     border-bottom:1px solid #fff;
     border-top:1px solid transparent;   /* 让上边框透明，否则可以注释掉看看效果不一样*/
+    position:relative;
 }
 
 #list-div .list2-class>li>a{
+    width:186px;
     font-size: 14px;
     color:#333;
     text-decoration: none;
@@ -94,4 +97,24 @@ li{
 #list-div .list2-class>li:hover{
     border-top:1px solid #DDD;
     border-bottom:1px solid #ddd;
+}
+
+#list-div .list2-class>#li1:hover{
+    border-right:0px solid #fff;    
+    z-index: 3px;
+}
+
+.list-menu{
+    width:800px;
+    height:400px;
+    border:2px solid #DCDCDC;
+    position:absolute;
+    left:190px;
+    top:0px;
+    
+    background-color:#FFF;
+}
+
+#list-div .list2-class>#li1:hover #menu1{
+    display:block;
 }
