--- a/bootstrap/css/work.css
+++ b/bootstrap/css/work.css
@@ -101,20 +101,18 @@
 
 #footer{
     clear:both;
-    margin-top:50px;
+    padding-top:2%;
     
 }
 
 
 #footer hr{
     margin:0 auto;
-    width:90%;
-   
-    
-   
+    width:90%; 
+    border:1.5px solid teal; 
 }
 #footer span{
-    display:inline-block;
+    display:block;
     margin:0 auto;
     text-align:center;
 }
@@ -162,7 +160,14 @@
         float:left;
     }
 
+    #footer{
+        clear:both;
+        padding-top:2%;
+        
+    }
+
     #footer hr{
+        border:1.5px solid teal;
         margin:0 auto;
         width:90%;
        
@@ -170,7 +175,7 @@
        
     }
     #footer span{
-        display:inline-block;
+        display:block;
         margin:0 auto;
         text-align:center;
     }
