--- a/bootstrap/css/exec.css
+++ b/bootstrap/css/exec.css
@@ -38,7 +38,7 @@
     #redian{
         border:1px solid grey;
         width:35%;
-        height:60%;
+        height:300px;
         float:left;
         margin-bottom:1.5%;
         padding:5px;
@@ -70,13 +70,193 @@
 }
 
 @media screen and (min-width:992px) and (max-width:1199px){
+    #container{
+        margin:0 auto;
+        width:100%;
+    }
+    #rightside{
+        height:100%;
+    }
+    #logo{
+        margin:0 auto;
+        width:90%;
+        background-color:white;
+    }
+    #banner{
+        margin:2% auto 4%;
+        width:90%;
+    }
+    #banner:after{
+        display:block;
+        content:"";
+        clear:both;
+    }
+    #leftside img{
+        width:60%;
+        height:100%;
+        float:left;
+        margin-right:1%;
+       
+    }
+
+    #redian{
+        border:1px solid grey;
+        width:35%;
+        height:300px;
+        float:left;
+        margin-bottom:1.5%;
+        padding:5px;
+    }
+
+    #redian h4{
+        color:grey;
+    }
+
+    #applink img{
+        float:left;
+        width:35%;
+        height:30%;
+    }
     
+    #section{
+        display: flex;
+        width:90%;
+        margin:0 auto;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        justify-content: space-between;
+    }
+
+    #section img{        
+        flex-grow:1;
+    }
 }
 
 @media screen and (min-width:768px) and (max-width:991px){
+    #container{
+        margin:0 auto;
+        width:100%;
+    }
+    #rightside{
+        height:100%;
+    }
+    #logo{
+        margin:0 auto;
+        width:90%;
+        background-color:white;
+    }
+    #banner{
+        margin:2% auto 4%;
+        width:90%;
+    }
+    #banner:after{
+        display:block;
+        content:"";
+        clear:both;
+    }
+    #leftside img{
+        width:60%;
+        height:100%;
+        float:left;
+        margin-right:1%;
+       
+    }
+
+    #redian{
+        border:1px solid grey;
+        width:35%;
+        height:200px;
+        float:left;
+        margin-bottom:1.5%;
+        padding:5px;
+    }
+
+    #redian h4{
+        color:grey;
+    }
+
+    #applink img{
+        float:left;
+        width:35%;
+        height:30%;
+    }
     
+    #section{
+        display: flex;
+        width:90%;
+        margin:0 auto;
+        flex-direction:row;
+        flex-wrap:nowrap;
+        justify-content: space-between;
+    }
+
+    #section img{        
+        flex-grow:1;
+    }
 }
 
 @media screen and (max-width:767px){
+    #container{
+        margin:0 auto;
+        width:100%;
+    }
+    #rightside{
+        height:100%;
+    }
+    #logo{
+        margin:0 auto;
+        width:90%;
+        background-color:white;
+        margin-bottom:2%;
+    }
+    #banner{
+        margin:2% auto 4%;
+        width:90%;
+    }
+    #banner:after{
+        display:block;
+        content:"";
+        clear:both;
+    }
+    #leftside img{
+        width:100%;
+        height:100%;
+        float:left;
+        margin-right:1%;
+        margin-bottom:2%;
+    }
+
+    #redian{
+        border:1px solid grey;
+        width:100%;
+        height:200px;
+        float:left;
+        margin-bottom:1.5%;
+        padding:5px;
+    }
+
+    #redian h4{
+        color:grey;
+    }
+
+    #applink img{
+        display:none;
+        float:left;
+        width:35%;
+        height:30%;
+    }
     
+    #section{
+        display: flex;
+        width:90%;
+        margin:0 auto;
+        flex-direction:row;
+        flex-wrap:wrap;
+        justify-content: space-between;
+    }
+
+    #section img{
+        margin-bottom:2%;        
+        flex-grow:1;
+    }
 }
