--- a/pm/css/login.css
+++ b/pm/css/login.css
@@ -4,6 +4,7 @@ body{
 }
 
 .login-area{
+	width:940px;
 	background:url(../images/index.png) 0 0 no-repeat;
 	background-size: 940px 778px;
 	padding:38px 38px 267px;
