--- a/pm/css/login.css
+++ b/pm/css/login.css
@@ -4,6 +4,7 @@ body{
 }
 
 .login-area{
+	margin:0 auto;
 	width:940px;
 	background:url(../images/index.png) 0 0 no-repeat;
 	background-size: 940px 778px;
@@ -51,7 +52,7 @@ body{
   background: #16a085;
   border-color: #16a085;
 }
-/*------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------------------------*/
 
 .login-screen{
 	background-color: #1abc9c;
@@ -85,6 +86,9 @@ form{
 	animation:twinkle 0.5s infinite ease-in-out;
 	-webkit-animation:twinkle 1s infinite ease-in-out;
 }
+
+
+
 
 
 
