--- a/jd2/css/jd_index.css
+++ b/jd2/css/jd_index.css
@@ -174,3 +174,221 @@ a:hover{
 #search-box div.hot-words a{
     color:#999;
 }
+
+#my-jd{
+    /*左浮动，边框，背景颜色，高度，左内边距，右内边距*/
+    width:96px;
+    float:left;
+    border:1px solid #efefef;
+    height:32px;
+    padding-left:27px;
+    padding-right:5px;
+    line-height:30px;
+    background:#f7f7f7 url(../images/iconlist_2.png) no-repeat -116px -25px;
+}
+
+#my-jd b{
+    /*边框透明，上边框#ddd*/
+    border:5px solid transparent;
+    border-top-color:#ddd;
+    position:relative;
+    top:10px;
+}
+
+#shopping-cart{
+    width:120px;
+    margin-left:10px;
+    float:left;
+    border:1px solid #efefef;
+    height:32px;
+    padding-left:27px;
+    padding-right:5px;
+    line-height:30px;
+    background:#f7f7f7 url(../images/iconlist_2.png) no-repeat -116px -83px;
+}
+
+#shopping-cart b{
+    border:5px solid transparent;
+    border-top-color:#ddd;
+    position:relative;
+    top:10px;
+}
+
+/*************模块3 主导航****************/
+#nav{
+    height:40px;
+    background-color:#e64346;
+    margin-top:10px;
+}
+
+
+
+#nav>p{
+    /*宽度，高度，行高，背景，左浮动*/
+    width:210px;
+    height:40px;
+    line-height:40px;
+    background-color:#e64346;
+    float:left;
+    background:#bd2a2c url(../images/jtr.jpg) no-repeat  180px 15px;
+}
+
+#nav>p a{
+    /*文字大小，颜色，加粗，取消下划线，左内边距*/
+    font-size:14px;
+    color:#fff;
+    font-weight:bold;
+    text-decoration:none;
+    padding-left:15px;
+}
+
+#nav>ul li{
+    float:left;
+
+}
+
+#nav>ul li a{
+    /*行内块，宽度，高度，行高，颜色，大小，取消下划线，鼠标移入换色*/
+    display:inline-block;
+    width:100px;
+    height:40px;
+    line-height:40px;
+    font-size:14px;
+    color:#fff;
+    text-decoration:none;
+    text-align:center;
+    font-weight:bold;
+}
+
+#nav>ul li a:hover{
+    background-color:#bd2a2c;
+}
+
+/**********模块4 banner广告***********/
+
+#banner{
+    height:410px;
+}
+
+#cate-box{
+    ／*左浮动，宽度，高度，边框，背景颜色*／
+    float: left;
+    width:210px;
+    height:410px;
+    border:2px solid #cd2a2c;
+    border-top:none;
+    background-color:#f7f7f7;
+    padding-top:5px;
+}
+
+#cate-box>li>a{
+    /*宽度，块级，上下左内边距，上下边框，文本大小，颜色取消下划线*/
+    display:block;
+    width:196px;
+    padding:5px 0 5px 10px;
+    border-top:1px solid transparent;
+    border-bottom:1px solid #fff;
+    color:#333;
+    font-size:14px;
+    text-decoration:none;
+}
+
+#cate-box>li a:hover{
+    background-color:#fff;
+    border-color:#ddd;
+    /*调整堆叠顺序*/
+    position:relative;
+    z-index: 30;
+}
+
+
+/****banner 中间区弹出框****/
+#cate-box{
+    position:relative;/*配合sub-cate-box定位*/
+}
+#sub-cate-box{
+    /*宽度，高度，边框，背景，内边距，定位，位置*/
+    width:720px;
+    min-height:300px;
+    border:1px solid #ddd;
+    background-color:#fff;
+    padding:5px;
+    position:absolute;
+    top:0px;
+    left:195px;
+    z-index:10;
+    display:none;
+}
+
+#sub-cate-box div.close{
+    /*宽度，高度，背景，倒角，文本大小，加粗，水平居中对齐，行高*/
+    width:20px;
+    height:20px;
+    background-color:#555;
+    border-radius:50%;
+    font-size:14px;
+    color:#fff;
+    font-weight:bold;
+    line-height:20px;
+    text-align:center;
+    cursor:pointer;
+    position:absolute;
+    right:-17px;
+    top:-4px;
+}
+
+
+#sub-cate-box div.sub-cate-items{
+    float:left;
+    width:500px;
+    min-height:100px;
+}
+
+#cate-box div.sub-cate-items li{
+    float:left;
+    border-left:1px solid #ddd;
+    padding:3px 5px;
+}
+
+#cate-box div.sub-cate-items ul{
+    /*撑起当前高度*/
+    overflow:hidden;
+    /*上边框，上下内边距*/
+    border-top:1px solid #ddd;
+    padding:5px 0;
+}
+
+#cate-box div.sub-cate-items li.title{
+    border-left:none;
+    text-align:right;
+    font-weight:bold;
+    width:70px;
+
+    text-decoration:underline;
+}
+
+#cate-box div.sub-cate-items li.title a{
+    color:#e4393c;
+}
+
+
+#cate-box div.sub-cate-banner{
+    width:194px;
+    float:right;
+    min-height:100px;
+    margin-right:10px;
+
+}
+
+#cate-box div.sub-cate-banner p{
+    margin-top:10px;
+}
+
+#cate-box div.sub-cate-banner h4{
+    margin:10px 0;
+    color:#e4393c;
+}
+
+#cate-box div.sub-cate-banner li{
+    margin:5px 0;
+}
